<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_efefef"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_4c6f98">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="教练"
            android:textColor="@color/white_ffffff"
            android:textSize="19sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_my_header"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/default_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/civ_my_header"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white_ffffff"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/tv_my_name"
                    android:background="@color/white_ffffff" />

                <TextView
                    android:id="@+id/tv_coach_driving_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/tv_my_name"
                    android:text="驾龄："
                    android:textColor="@color/white_ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_coach_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_my_name"
                android:layout_marginTop="12dp"
                android:text=""
                android:textColor="@color/white_ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:padding="10dp">

        <FrameLayout
            android:id="@+id/fl_student"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:background="@color/white_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/student_managerment_icon"
                android:gravity="center"
                android:text="@string/student_managerment"
                android:textColor="@color/black_333333" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_daily"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/fl_student"
            android:background="@color/white_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/daily_plan_icon"
                android:gravity="center"
                android:text="@string/daily_plan"
                android:textColor="@color/black_333333" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_orders"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_below="@id/fl_student"
            android:layout_marginTop="10dp"
            android:background="@color/white_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/orders_managerment_icon"
                android:gravity="center"
                android:text="@string/orders_managerment"
                android:textColor="@color/black_333333" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_statistic"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_alignLeft="@id/fl_daily"
            android:layout_below="@id/fl_daily"
            android:layout_marginTop="10dp"
            android:background="@color/white_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/statistic_managerment_icon"
                android:gravity="center"
                android:text="@string/statistic_managerment"
                android:textColor="@color/black_333333" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>