<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_efefef"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/blue_4c6f98"
        android:gravity="center"
        android:text="我的"
        android:textColor="@color/white_ffffff"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_ffffff"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_my_header"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:src="@drawable/daily_plan_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@id/civ_my_header"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_my_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="教练名字"
                                android:textColor="@color/black_424242"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="1px"
                                android:layout_height="15dp"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@id/tv_my_name"
                                android:background="@color/black_424242" />

                            <TextView
                                android:id="@+id/tv_my_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@id/tv_my_name"
                                android:text="男"
                                android:textColor="@color/black_424242"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_my_phonenumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_my_name"
                            android:layout_marginTop="10dp"
                            android:text="电话：13512345678"
                            android:textColor="@color/black_666666"
                            android:textSize="14sp" />

                        <RatingBar
                            android:id="@+id/rb_my_rating"
                            style="@style/roomRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_my_phonenumber"
                            android:layout_marginTop="3dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:rating="4" />
                    </LinearLayout>


                </RelativeLayout>

                <View style="@style/divider_line_dedede" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_my_driving_years"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5"
                            android:textColor="@color/blue_167dcc"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/my_driving_years"
                            android:textColor="@color/black_424242"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_my_student_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30"
                            android:textColor="@color/blue_167dcc"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/my_student_total"
                            android:textColor="@color/black_424242"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_my_feedback_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="96"
                            android:textColor="@color/blue_167dcc"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/my_feedback_rate"
                            android:textColor="@color/black_424242"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View style="@style/divider_line_dedede" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_ffffff"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/my_training_field"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_train_field"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />
                </LinearLayout>

                <View style="@style/divider_line_dedede" />

                <TextView
                    android:id="@+id/tv_my_training_field"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="25dp"
                    android:gravity="center_vertical"
                    android:text="陕西省运城市"
                    android:textColor="@color/black_424242"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_my_car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_ffffff"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/my_car_type"
                        android:drawablePadding="5dp"
                        android:text="@string/my_car_type"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_right" />
                </RelativeLayout>

                <View style="@style/divider_line_dedede" />

                <TextView
                    android:id="@+id/tv_my_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="25dp"
                    android:gravity="center_vertical"
                    android:text="雪铁龙"
                    android:textColor="@color/black_424242"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_ffffff"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/my_training_subject"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_training_subject"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />
                </LinearLayout>

                <View style="@style/divider_line_dedede" />

                <TextView
                    android:id="@+id/tv_my_training_subject"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="25dp"
                    android:gravity="center_vertical"
                    android:text="科目一"
                    android:textColor="@color/black_424242"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_ffffff"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_my_order_message"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/my_order_messange"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_order_message"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />
                </LinearLayout>

                <View style="@style/divider_line_dedede" />

                <LinearLayout
                    android:id="@+id/ll_my_share"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/my_share"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_share"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />
                </LinearLayout>

                <View style="@style/divider_line_dedede" />

                <LinearLayout
                    android:id="@+id/ll_my_setting"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/my_setting"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_setting"
                        android:textColor="@color/grey_999999"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>